--- a/cmake/Modules/GeneratePkgConfig/pkg-config.cmake.in
+++ b/cmake/Modules/GeneratePkgConfig/pkg-config.cmake.in
@@ -4,5 +4,5 @@ libdir=${prefix}/@_INSTALL_LIBDIR@
 Name: @_PROJECT_NAME@
 Description: @_PROJECT_DESCRIPTION@
 Version: @_PROJECT_VERSION@
-Libs: -L${libdir} -l@_TARGET_OUTPUT_NAME@ @_interface_link_libraries@
-Cflags: @_interface_compile_options@ @_interface_include_dirs@ @_interface_definitions@
+Libs: -L${libdir} -l@_TARGET_OUTPUT_NAME@ @_libs_field_append_value@
+Cflags: @_cflags_field_value@
