--- a/cmake/Modules/GeneratePkgConfig/target-compile-settings.cmake.in
+++ b/cmake/Modules/GeneratePkgConfig/target-compile-settings.cmake.in
@@ -1,7 +1,8 @@
 set(_TARGET_INTERFACE_LINK_LIBRARIES "@_interface_link_libraries@")
 set(_TARGET_INTERFACE_COMPILE_OPTIONS "@_interface_compile_options@")
 set(_TARGET_INTERFACE_INCLUDE_DIRS "@_interface_include_dirs@")
-set(_TARGET_INTERFACE_DEFINITIONS "@_interface_definitions@")
+set(_TARGET_INTERFACE_DEFINITIONS "@_interface_compile_definitions@")
+set(_TARGET_INTERFACE_LINK_OPTIONS "@_interface_link_options@")
 set(_TARGET_OUTPUT_NAME "@_output_name@")
 
 set(_INSTALL_LIBDIR "@CMAKE_INSTALL_LIBDIR@")
@@ -11,3 +12,7 @@ set(_SHARED_LIBRARY_PREFIX "@CMAKE_SHARED_LIBRARY_PREFIX@")
 set(_PROJECT_NAME "@PROJECT_NAME@")
 set(_PROJECT_DESCRIPTION "@PROJECT_DESCRIPTION@")
 set(_PROJECT_VERSION "@PROJECT_VERSION@")
+
+set(_CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES "@CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES@")
+set(_CMAKE_CXX_IMPLICIT_LINK_LIBRARIES "@CMAKE_CXX_IMPLICIT_LINK_LIBRARIES@")
+set(_CMAKE_CXX_IMPLICIT_LINK_DIRECTORIES "@CMAKE_CXX_IMPLICIT_LINK_DIRECTORIES@")
