--- a/cmake/Modules/GeneratePkgConfig/generate-pkg-config.cmake.in
+++ b/cmake/Modules/GeneratePkgConfig/generate-pkg-config.cmake.in
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.16.0 FATAL_ERROR) # Configurable policies: <= C
 # It is a template that is generated during the generation stage of the CMake build.
 # It is only actually executed at install time.
 
-include("@_variables_file_name@")
+include("@_expanded_variables_file@")
 
 # Helper function to transform a CMake list into a space-separated string, prepending each element
 # with the specified prefix.
@@ -27,6 +27,7 @@ function(cmake_list_to_pkg_config_value_str)
 
 	# create copy of list with all empty elements removed
 	set(_tmp_list "${ARG_LIST}")
+	list(REMOVE_DUPLICATES _tmp_list)
 	list(REMOVE_ITEM _tmp_list "")
 
 	# at this point, some items might have the desired prefix, some not
@@ -42,16 +43,14 @@ function(cmake_list_to_pkg_config_value_str)
 	set(${ARG_RESULT_VAR} "${_tmp_list}" PARENT_SCOPE)
 endfunction()
 
-# Helper function for splitting full library paths into [dir, name] and merging repetitive dir entries
-# Arguments:
+# Helper function for splitting full library paths into [dir, name]
 # - RESULT_LIB_DIRS: variable that will contain the resulting list of library directories in the parent scope
 # - RESULT_LIB_NAMES: variable that will contain the resulting list of library names in the parent scope
-# - LIBS: A CMake list of interface link libraries of the target
-# - BASE_LIB_DIR: base library directory
+# - LIB_FILES: A CMake list of the files that are interface link libraries of the target
 function(split_library_dirs)
 
 	set(options "")
-	set(oneValueArgs RESULT_LIB_DIRS RESULT_LIB_NAMES LIBS BASE_LIB_DIR)
+	set(oneValueArgs RESULT_LIB_DIRS RESULT_LIB_NAMES LIB_FILES)
 	set(multiValueArgs "")
 
 	cmake_parse_arguments(
@@ -60,65 +59,64 @@ function(split_library_dirs)
 		"${options}" "${oneValueArgs}" "${multiValueArgs}"
 	)
 
-	set(_libdirs "${ARG_BASE_LIB_DIR}")
-	set(_libs_result "")
-	foreach (lib IN LISTS ARG_LIBS)
-		# TODO: replace with cmake_path(...) in CMake >= 3.19
+	# TODO: replace calls to get_filename_component() with cmake_path(...)
+	# and file(REAL_PATH ...) if needed in CMake >= 3.19
+	foreach (lib IN LISTS ARG_LIB_FILES)
 		get_filename_component(lDir "${lib}" DIRECTORY)
 		if (lDir)
-			# TODO: replace with file(REAL_PATH ...) in CMake >= 3.19
 			get_filename_component(lDir "${lDir}" REALPATH)
-			list(APPEND _libdirs "${lDir}")
 		endif()
-		# TODO: replace with cmake_path(...) in CMake >= 3.19
 		get_filename_component(lFile "${lib}" NAME_WE)
 		string(REPLACE "${_SHARED_LIBRARY_PREFIX}" "" lFile "${lFile}")
+
+		list(APPEND _libdirs "${lDir}")
 		list(APPEND _libs_result "${lFile}")
 	endforeach()
-	list(REMOVE_DUPLICATES _libdirs)
-	list(REMOVE_AT _libdirs 0) # as it is the base libdir and will be handled separately
 
 	set(${ARG_RESULT_LIB_DIRS} "${_libdirs}" PARENT_SCOPE)
 	set(${ARG_RESULT_LIB_NAMES} "${_libs_result}" PARENT_SCOPE)
 endfunction()
 
+#------------------------------------------------------------------------------
 # create string value to be appended to the `Libs:` field of the pkg-config file
+#------------------------------------------------------------------------------
 split_library_dirs(
-	RESULT_LIB_DIRS "_lib_dirs"
+	RESULT_LIB_DIRS "_library_directories"
 	RESULT_LIB_NAMES "_library_names"
-	LIBS "${_TARGET_INTERFACE_LINK_LIBRARIES}"
-	BASE_LIB_DIR "${CMAKE_INSTALL_PREFIX}/${_INSTALL_LIBDIR}"
+	LIB_FILES "${_TARGET_INTERFACE_LINK_LIBRARIES}"
 )
 
+# remove standard {include,link} directories and libraries
+foreach (d IN LISTS _CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES _CMAKE_CXX_IMPLICIT_LINK_LIBRARIES _CMAKE_CXX_IMPLICIT_LINK_DIRECTORIES)
+	list(REMOVE_ITEM _TARGET_INTERFACE_INCLUDE_DIRS "${d}")
+	list(REMOVE_ITEM _library_directories "${d}")
+endforeach()
+
 cmake_list_to_pkg_config_value_str(
-	RESULT_VAR _libs
+	RESULT_VAR _interface_link_libraries
 	LIST "${_library_names}"
 	PREFIX "-l"
 )
-# TODO: Ugly OpenSSL hack.
-# For some reason the target names do not get resolved into lib names.
-# Thus, we must do so manually here, under 2 constraints:
-# - we provide only a best-effort guess for the actual lib names, and
-# - we assume that the libraries are located in a known system directory
-#  (if not, we have no way of knowing the appropriate `-L/lib/dir` flag to pass...)
-string(REPLACE "OpenSSL::SSL" "ssl" _libs "${_libs}")
-string(REPLACE "OpenSSL::Crypto" "crypto" _libs "${_libs}")
-set(_libs_field_append_value "${_libs}")
 
-
-list(LENGTH _lib_dirs _additional_libdirs_count)
-if (_additional_libdirs_count GREATER 0)
-	cmake_list_to_pkg_config_value_str(
-		RESULT_VAR _additional_libdirs
-		LIST "${_lib_dirs}"
-		PREFIX "-L"
-	)
-	string(PREPEND _libs_field_append_value "${_additional_libdirs} ")
-endif()
-
-# create string value for the `Cflags:` field of the pkg-config file
 cmake_list_to_pkg_config_value_str(
-	RESULT_VAR _interface_definitions
+	RESULT_VAR _interface_link_library_directories
+	LIST "${_library_directories}"
+	PREFIX "-L"
+)
+
+cmake_list_to_pkg_config_value_str(
+	RESULT_VAR _interface_link_options
+	LIST "${_TARGET_INTERFACE_LINK_OPTIONS}"
+	PREFIX ""
+)
+
+set(_libs_field_append_value "${_interface_link_library_directories} ${_interface_link_libraries} ${_interface_link_options}")
+
+#------------------------------------------------------------------------------
+# create string value for the `Cflags:` field of the pkg-config file
+#------------------------------------------------------------------------------
+cmake_list_to_pkg_config_value_str(
+	RESULT_VAR _interface_compile_definitions
 	LIST "${_TARGET_INTERFACE_DEFINITIONS}"
 	PREFIX "-D"
 )
@@ -132,9 +130,12 @@ cmake_list_to_pkg_config_value_str(
 	LIST "${_TARGET_INTERFACE_COMPILE_OPTIONS}"
 	PREFIX ""
 )
-set(_cflags_field_value "${_interface_compile_options} ${_interface_include_dirs} ${_interface_definitions}")
 
+set(_cflags_field_value "${_interface_compile_options} ${_interface_include_dirs} ${_interface_compile_definitions}")
+
+#------------------------------------------------------------------------------
 # create pkg-config file from template and install it
+#------------------------------------------------------------------------------
 configure_file(
 	"@_pkg_config_file_template_filename@"
 	"@_generate_target_dir@/@_package_name@.pc"
