--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.6)
+cmake_minimum_required(VERSION 3.16.0 FATAL_ERROR) # Configurable policies: <= CMP0097
 
 # Our tests contain printf formating checks therefore we disable GCC format string errors:
 if (CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
@@ -12,15 +12,31 @@ file(GLOB tests "${CMAKE_CURRENT_SOURCE_DIR}/test_*.cpp")
 list(REMOVE_ITEM tests "${CMAKE_CURRENT_SOURCE_DIR}/test_natpmp.cpp") # doesn't build at time of writing
 list(REMOVE_ITEM tests "${CMAKE_CURRENT_SOURCE_DIR}/test_utils.cpp") # helper file, not a test
 
-add_library(test_common STATIC main.cpp test.cpp setup_transfer.cpp dht_server.cpp udp_tracker.cpp
-	peer_server.cpp web_seed_suite.cpp swarm_suite.cpp test_utils.cpp make_torrent.cpp settings.cpp
+add_library(test_common 
+	STATIC 
+	dht_server.cpp 
+	main.cpp 
+	setup_transfer.cpp
+	test.cpp  
+	peer_server.cpp 
+	swarm_suite.cpp 
+	make_torrent.cpp 
+	settings.cpp
+	test_utils.cpp 
+	udp_tracker.cpp
+	web_seed_suite.cpp 
 )
 target_link_libraries(test_common PUBLIC torrent-rasterbar)
 if (MSVC)
-	# C4127: conditional expression is constant
-	# C4309: 'conversion' : truncation of constant value
-	# C4310: cast truncates constant value
-	target_compile_options(test_common PUBLIC /wd4127 /wd4309 /wd4310 )
+	target_compile_options(test_common PUBLIC
+		/wd4127 # C4127: conditional expression is constant
+		/wd4309 # C4309: 'conversion' : truncation of constant value
+		/wd4310 # C4310: cast truncates constant value
+	)
+endif()
+
+if(CMAKE_CXX_COMPILER_ID MATCHES Clang)
+	target_compile_options(test_common PUBLIC -Wno-implicit-int-float-conversion)
 endif()
 
 foreach(TARGET_SRC ${tests})
@@ -39,7 +55,7 @@ file(COPY ${PYTHON_ASSETS} DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
 file(GLOB XML_ASSETS "${CMAKE_CURRENT_SOURCE_DIR}/*.xml")
 file(COPY ${XML_ASSETS} DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
 
-file(COPY "utf8_test.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
 file(COPY "mutable_test_torrents" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
-file(COPY "test_torrents" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
 file(COPY "ssl" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
+file(COPY "test_torrents" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
+file(COPY "utf8_test.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
