fix MacOS workflow for building C bindings

--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -27,6 +27,7 @@ jobs:
       if: runner.os == 'macOS'
       run: |
         brew install boost-build boost
+        echo "using darwin ;" >>~/user-config.jam
 
     - name: update package lists (linux)
       if: runner.os == 'Linux'
