Default to libtorrent-link=static boost-link=static

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -82,7 +82,7 @@ jobs:
         # Homebrew's python "framework" sets a prefix via distutils config.
         # --prefix conflicts with --user, so null out prefix so we have one
         # command that works everywhere
-        python3 setup.py build_ext --b2-args="libtorrent-link=static" install --user --prefix=
+        python3 setup.py build_ext install --user --prefix=
 
     - name: tests
       if: runner.os != 'Windows'
