--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -40,7 +40,7 @@ jobs:
     - name: dependencies (linux)
       if: runner.os == 'Linux'
       run: |
-        sudo apt install libboost-tools-dev libboost-python-dev libboost-dev libboost-system-dev python3 python3-setuptools
+        sudo apt install libboost-tools-dev libboost-python-dev libboost-dev libboost-system-dev python3 python3-setuptools libssl-dev
 
     - name: install boost (windows)
       if: runner.os == 'Windows'
@@ -56,6 +56,12 @@ jobs:
       run: |
         cd boost
         .\b2 headers
+
+    - name: install openssl (windows)
+      if: runner.os == 'Windows'
+      shell: cmd
+      run: |
+        choco install openssl
 
     - name: build/install (windows)
       if: runner.os == 'Windows'
