--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -27,6 +27,10 @@ jobs:
         run: |
           sudo apt update
 
+      - uses: Chocobo1/setup-ccache-action@v1
+        with:
+          update_packager_index: false
+
       - name: install boost
         run: |
           sudo apt install libboost-tools-dev libboost-dev libboost-system-dev
@@ -67,6 +71,10 @@ jobs:
         run: |
           sudo apt update
 
+      - uses: Chocobo1/setup-ccache-action@v1
+        with:
+          update_packager_index: false
+
       - name: install clang-9
         continue-on-error: true
         run: |
@@ -99,6 +107,10 @@ jobs:
         run: |
           sudo apt update
 
+      - uses: Chocobo1/setup-ccache-action@v1
+        with:
+          update_packager_index: false
+
       - name: install boost
         run: |
           sudo apt install libboost-tools-dev libboost-dev libboost-system-dev
@@ -124,6 +136,10 @@ jobs:
         continue-on-error: true
         run: |
           sudo apt update
+
+      - uses: Chocobo1/setup-ccache-action@v1
+        with:
+          update_packager_index: false
 
       - name: install clang-tidy
         run: sudo apt install clang-tidy libc++-dev
@@ -158,6 +174,10 @@ jobs:
         continue-on-error: true
         run: |
           sudo apt update
+
+      - uses: Chocobo1/setup-ccache-action@v1
+        with:
+          update_packager_index: false
 
       - name: install clang-10
         continue-on-error: true
@@ -195,6 +215,10 @@ jobs:
         run: |
           sudo apt update
 
+      - uses: Chocobo1/setup-ccache-action@v1
+        with:
+          update_packager_index: false
+
       - name: install boost
         run: |
           sudo apt install libboost-tools-dev libboost-dev libboost-system-dev
@@ -224,6 +248,12 @@ jobs:
         continue-on-error: true
         run: |
           sudo apt update
+
+      - uses: Chocobo1/setup-ccache-action@v1
+        # the ccache version on ubuntu-18.04 is too old
+        if: matrix.os != 'ubuntu-18.04'
+        with:
+          update_packager_index: false
 
       - name: install dependencies
         run: |
