--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -22,6 +22,8 @@ jobs:
         with:
            submodules: recursive
 
+      - uses: Chocobo1/setup-ccache-action@v1
+
       - name: install boost
         run: |
           brew install boost-build boost
@@ -46,6 +48,8 @@ jobs:
         uses: actions/checkout@v2.3.3
         with:
            submodules: recursive
+
+      - uses: Chocobo1/setup-ccache-action@v1
 
       - name: install boost
         run: |
@@ -72,6 +76,8 @@ jobs:
         uses: actions/checkout@v2.3.3
         with:
            submodules: recursive
+
+      - uses: Chocobo1/setup-ccache-action@v1
 
       - name: install boost
         run: |
