--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -31,6 +31,12 @@ jobs:
       run: |
         sudo apt update
 
+    - uses: Chocobo1/setup-ccache-action@v1
+      # the ccache version on ubuntu-18.04 is too old
+      if: matrix.os != 'ubuntu-18.04'
+      with:
+        update_packager_index: false
+
     - name: dependencies (linux)
       if: runner.os == 'Linux'
       run: |
