--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -13,7 +13,7 @@ jobs:
 
    tests:
       name: Test
-      runs-on: windows-2019
+      runs-on: windows-latest
       continue-on-error: true
 
       steps:
