Use job-specific ccaches

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -30,6 +30,9 @@ jobs:
       - uses: Chocobo1/setup-ccache-action@v1
         with:
           update_packager_index: false
+          override_cache_key: ccache-linux-build-${{ github.base_ref }}-${{ matrix.config }}
+          ccache_options: |
+            max_size=5G
 
       - name: install boost
         run: |
@@ -74,6 +77,9 @@ jobs:
       - uses: Chocobo1/setup-ccache-action@v1
         with:
           update_packager_index: false
+          override_cache_key: ccache-linux-fuzzers-${{ github.base_ref }}
+          ccache_options: |
+            max_size=500M
 
       - name: install clang-9
         continue-on-error: true
@@ -110,6 +116,9 @@ jobs:
       - uses: Chocobo1/setup-ccache-action@v1
         with:
           update_packager_index: false
+          override_cache_key: ccache-linux-check-headers-${{ github.base_ref }}
+          ccache_options: |
+            max_size=500M
 
       - name: install boost
         run: |
@@ -140,6 +149,9 @@ jobs:
       - uses: Chocobo1/setup-ccache-action@v1
         with:
           update_packager_index: false
+          override_cache_key: ccache-linux-clang-tidy-${{ github.base_ref }}
+          ccache_options: |
+            max_size=500M
 
       - name: install clang-tidy
         run: sudo apt install clang-tidy libc++-dev
@@ -178,6 +190,9 @@ jobs:
       - uses: Chocobo1/setup-ccache-action@v1
         with:
           update_packager_index: false
+          override_cache_key: ccache-linux-tests-${{ matrix.config }}-${{ github.base_ref }}
+          ccache_options: |
+            max_size=5G
 
       - name: install clang-10
         continue-on-error: true
@@ -218,6 +233,9 @@ jobs:
       - uses: Chocobo1/setup-ccache-action@v1
         with:
           update_packager_index: false
+          override_cache_key: ccache-linux-simulations-${{ github.base_ref }}
+          ccache_options: |
+            max_size=5G
 
       - name: install boost
         run: |
@@ -252,6 +270,9 @@ jobs:
       - uses: Chocobo1/setup-ccache-action@v1
         with:
           update_packager_index: false
+          override_cache_key: ccache-linux-dist-${{ matrix.os }}-${{ github.base_ref }}
+          ccache_options: |
+            max_size=15G
 
       - name: install dependencies
         run: |
