--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -147,7 +147,7 @@ jobs:
         run: |
           set BOOST_ROOT=%CD%\boost
           set PATH=%BOOST_ROOT%;%PATH%
-          b2 ${{ matrix.config }} cxxstd=17 warnings=all warnings-as-errors=on
+          b2 ${{ matrix.config }} warnings=all warnings-as-errors=on
 
       - name: build examples
         if: ${{ ! contains(matrix.config, 'windows-api=store') }}
