--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -63,7 +63,7 @@ jobs:
 
       - name: install boost
         run: |
-          brew install boost-build boost
+          brew install boost-build boost openssl
           echo "using darwin ;" >>~/user-config.jam
 
       - name: build and run simulations
@@ -95,7 +95,7 @@ jobs:
 
       - name: install boost
         run: |
-          brew install boost-build boost
+          brew install boost-build boost openssl
           echo "using darwin ;" >>~/user-config.jam
 
       - name: build library
