--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -22,7 +22,7 @@ jobs:
     - name: dependencies (MacOS)
       if: runner.os == 'macOS'
       run: |
-        brew install boost-build boost boost-python3 python@3.9
+        brew install boost-build boost boost-python3 python@3.9 openssl
         echo "using darwin ;" >>~/user-config.jam
 
     - name: update package lists (linux)
