--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: install boost
         run: |
-          brew install boost-build boost
+          brew install boost-build boost openssl
           echo "using darwin ;" >>~/user-config.jam
 
       - name: build and run tests
@@ -53,7 +53,7 @@ jobs:
 
       - name: install boost
         run: |
-          brew install boost-build boost
+          brew install boost-build boost openssl
           echo "using darwin ;" >>~/user-config.jam
 
       - name: build and run simulations
@@ -81,7 +81,7 @@ jobs:
 
       - name: install boost
         run: |
-          brew install boost-build boost
+          brew install boost-build boost openssl
           echo "using darwin ;" >>~/user-config.jam
 
       - name: build and run tests
