--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: install boost
         run: |
-          brew install boost-build boost
+          brew install boost-build boost openssl
           echo "using darwin ;" >>~/user-config.jam
 
       - name: build and run tests
@@ -61,7 +61,7 @@ jobs:
 
       - name: install boost
         run: |
-          brew install boost-build boost
+          brew install boost-build boost openssl
           echo "using darwin ;" >>~/user-config.jam
 
       - name: build and run simulations
@@ -93,7 +93,7 @@ jobs:
 
       - name: install boost
         run: |
-          brew install boost-build boost
+          brew install boost-build boost openssl
           echo "using darwin ;" >>~/user-config.jam
 
       - name: build and run tests
